--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
         <title>My Home</title>
     </head>
     <body>
-            <h1>sad boy</h1>
+            <h1>happy boy</h1>
     </body>
 </html>
